--- a/language/ru_RU.po
+++ b/language/ru_RU.po
@@ -1,21 +1,54 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MSBios I18n\n"
-"POT-Creation-Date: 2017-11-16 11:05+0200\n"
-"PO-Revision-Date: 2017-11-16 11:05+0200\n"
+"POT-Creation-Date: 2017-11-17 13:13+0200\n"
+"PO-Revision-Date: 2017-11-17 13:15+0200\n"
 "Last-Translator: \n"
 "Language-Team: MSBios Team <info@msbios.com>\n"
 "Language: ru_RU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 1.8.7\n"
 "X-Poedit-Basepath: ../view\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: translate\n"
 "X-Poedit-SearchPath-0: .\n"
+
+#: error/404.phtml:4
+msgid "A 404 error occurred"
+msgstr "Произошла ошибка 404"
+
+#: error/404.phtml:10
+msgid "The requested controller was unable to dispatch the request."
+msgstr "Запрошенный контроллер не смог отправить запрос."
+
+#: error/404.phtml:13
+msgid "The requested middleware was unable to dispatch the request."
+msgstr ""
+"Запрошенному промежуточному программному обеспечению не удалось отправить "
+"запрос."
+
+#: error/404.phtml:16
+msgid ""
+"The requested controller could not be mapped to an existing controller class."
+msgstr ""
+"Запрошенный контроллер не может быть сопоставлен с существующим классом "
+"контроллера."
+
+#: error/404.phtml:19
+msgid "The requested controller was not dispatchable."
+msgstr "Запрошенный контроллер не был отправлен."
+
+#: error/404.phtml:22
+msgid "The requested URL could not be matched by routing."
+msgstr "Запрошенный URL-адрес не может быть сопоставлен маршрутизацией."
+
+#: error/404.phtml:25
+msgid "We cannot determine at this time why a 404 was generated."
+msgstr "В настоящее время мы не можем определить, почему было создано 404."
 
 #: ms-bios/i18n/index/index.phtml:1
 msgid "I18n Module"
